update styling add newletter signup

--- a/index.html
+++ b/index.html
@@ -5,5 +5,20 @@ title: Open Data Day Münster 2014
 <div id="home">
   <h1>Open Data Day 2014</h1>
   <h2>Münster, 22.2.2014</h2>
-  <p>stay tuned</p>
+  <!-- Begin MailChimp Signup Form -->
+     <div id="mc_embed_signup">
+       <form action="http://github.us3.list-manage.com/subscribe/post?u=0280dca8af5c7f6308e1e36ae&amp;id=8151d48caa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+       <div class="mc-field-group">
+         <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+       </div>
+       <div id="mce-responses" class="clear">
+         <div class="responsesse" id="mce-error-response" style="display:none"></div>
+         <div class="responsesseesponse" id="mce-success-response" style="display:none"></div>
+       </div>      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+           <div style="position: absolute; left: -5000px;"><input type="text" name="b_0280dca8af5c7f6308e1e36ae_8151d48caa" value=""></div>
+           <div class="clearr"><input type="submit" value="Get Updates!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+       </form>
+     </div>
+
+           <!--End mc_embed_signup-->
 </div>
