ga added and added placeholder for mail

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Open Data Day Münster 2014
      <div id="mc_embed_signup">
        <form action="http://github.us3.list-manage.com/subscribe/post?u=0280dca8af5c7f6308e1e36ae&amp;id=8151d48caa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
        <div class="mc-field-group">
-         <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+         <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="E-Mail Adresse">
        </div>
        <div id="mce-responses" class="clear">
          <div class="responsesse" id="mce-error-response" style="display:none"></div>
