--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ title: Open Data Day Münster 2014
   <hr/>
   <div id="intro">
     <p>
-    Am 22. Februar treffen sich weltweit Aktivisten, um sich für Open Data nützlich zu machen. Auch in Münster organisieren wir ein Event. Wir laden Hacker, Journalisten, Aktivisten ein sich zu beteiligen! Wir planen:</p>
+    Am 22. Februar treffen sich weltweit Aktivisten, um sich für Open Data nützlich zu machen. Auch in Münster organisieren wir ein Event. Wir laden Hacker, Journalisten und Aktivisten ein sich zu beteiligen! Wir planen:</p>
     <section>
-    <div class="track diy"><h3>Do-it Yourself Track</h3> Für Hacker/Hacks die mit dem Thema schon vertraut sind und eigene Ideen umsetzen wollen.</div>
+    <div class="track diy"><h3>Do-it Yourself Track</h3> Für Hacker die mit dem Thema schon vertraut sind und eigene Ideen umsetzen wollen.</div>
     <div class="track ho"><h3>Hands-on Track</h3> Für Hacker/technisch versierte Aktivisten/Journalisten, die sich mit Tools beschäftigen wollen.</div>
     <div class="track dj"><h3>Datenjournalismus <br>Track</h3> Für Journalisten, die lernen wollen, wie für sie Open Data und Data Journalism relevant ist.</div>
     </section>
