--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@ title: Open Data Day Münster 2014
     <div class="track ho"><h3>Hands-on Track</h3> Für Hacker/technisch versierte Aktivisten/Journalisten, die sich mit Tools beschäftigen wollen.</div>
     <div class="track dj"><h3>Datenjournalismus <br>Track</h3> Für Journalisten, die lernen wollen, wie für sie Open Data und Data Journalism relevant ist.</div>
     </section>
+    <section class="infos"><a class="button" href="https://hackpad.com/OpenDataDay-Mnster-FSVXVOwSJeF"> -> Weitere Infos <- </a></section>
     <p>Das ganze dient als Kick Off für ein Open Knowledge Lab in Münster - es bleibt also nicht bei diesem einen Event.</p>
-    
+
   </div>
 
   <!-- Begin MailChimp Signup Form -->
