--- a/index.html
+++ b/index.html
@@ -38,3 +38,9 @@ title: Open Data Day Münster 2014
      <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.de/tickets-external?eid=10345416419&ref=etckt" frameborder="0" height="352" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.de/r/etckt">Online-Registrierung für Events</a><span style="color:#ddd;"> für </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://www.eventbrite.de/e/open-data-day-munster-tickets-10345416419?ref=etckt">Open Data Day Münster</a> <span style="color:#ddd;">unterstützt von</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.de?ref=etckt">Eventbrite</a></div></div>
    </div>
 </div>
+<footer>
+  <a href="https://twitter.com/kirel">@kirel</a> | 
+  <a href="https://twitter.com/mila_frerichs">@mila_frerichs</a> | 
+  <a href="https://twitter.com/ubergesundheit">@ubergesundheit</a> | 
+  <a href="https://twitter.com/peterlih">@peterlih</a>
+</footer>
