--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ title: Open Data Day Münster 2014
    </div>
 </div>
 <footer>
+  Orga Team: 
   <a href="https://twitter.com/kirel">@kirel</a> | 
   <a href="https://twitter.com/mila_frerichs">@mila_frerichs</a> | 
   <a href="https://twitter.com/ubergesundheit">@ubergesundheit</a> | 
