Open Data Day 2015 Inhalte überarbeitet, CSS überarbeitet, Typekit JS weg, Viewport Meta Tag für mobile Nutzer, Hintergrund ähnlich wie beim Poster, neues Eventbrite Event eingefügt, Newsletter Button mit deutschem Text auf Absende-button

--- a/index.html
+++ b/index.html
@@ -1,47 +1,83 @@
 ---
 layout: default
-title: Open Data Day Münster 2014
+title: Open Data Day Münster 2015
 ---
 <div id="home">
-  <h1>Open Data Day 2014</h1>
-  <h2>Münster, 22.2.2014</h2>
+  <h3>Open Data Day 2015</h3>
+  <h1>Tag der offenen Daten</h1>
+  <h2>Münster, 21.2.2015</h2>
   <hr/>
   <div id="intro">
     <p>
-    Am 22. Februar treffen sich weltweit Aktivisten, um sich für Open Data nützlich zu machen. Auch in Münster organisieren wir ein Event. Wir laden Entwickler, Journalisten und Aktivisten ein sich zu beteiligen! Wir planen:</p>
-    <section>
-    <div class="track diy"><h3>Do-it Yourself Track</h3> Für Entwickler die mit dem Thema schon vertraut sind und eigene Ideen umsetzen wollen.</div>
-    <div class="track ho"><h3>Hands-on Track</h3> Für Entwickler/technisch versierte Aktivisten/Journalisten, die sich mit Tools beschäftigen wollen.</div>
-    <div class="track dj"><h3>Datenjournalismus <br>Track</h3> Für Journalisten, die lernen wollen, wie für sie Open Data und Data Journalism relevant ist.</div>
-    </section>
-    <section class="infos"><a class="button" href="https://hackpad.com/OpenDataDay-Mnster-FSVXVOwSJeF"> -> Weitere Infos <- </a></section>
-    <p>Das ganze dient als Kick Off für ein Open Knowledge Lab in Münster - es bleibt also nicht bei diesem einen Event.</p>
+    Am 21. Februar treffen sich weltweit Aktivisten, um sich für Open Data nützlich zu machen. Auch in Münster organisieren wir wieder ein Event. Wir laden Entwickler, Designer, Open-Data-Interessierte, Geographen, Stadtentwickler, Journalisten und Aktivisten herzlich ein, sich zu beteiligen!</p>
 
+    <h2>Wir planen:</h2>
+    <div class="twocolumn">
+    <h3>Hackathon</h3> 
+    <p>Für Entwickler die mit dem Thema schon vertraut sind und eigene Ideen umsetzen wollen. Wir stellen hierfür einige Datensätze bereit.</p>
+    </div>
+    <div class="twocolumn">
+    <h3>Workshops</h3> 
+    <p>Für Entwickler, technisch versierte Aktivisten, Journalisten und Interessierte, die sich mit sich offenen Daten und Open-Data-Werkzeugen beschäftigen wollen.</p>
+    </div>
+
+    <h3>Ist das was für mich?</h3>
+    <p>
+      <b>Ich interessiere mich für Transparenz und möchte mich zivil engagieren.</b><br>
+        Ja! Du kannst bei der Münster FAQ mithelfen.<br><br>
+      <b>Ich bin Journalist und kann Excel aber das reicht nicht immer.</b><br>
+        Ja! Wir zeigen Tools und wie man sie nutzen kann.<br><br>
+      <b>Open Data? Datenjournalismus? Das hab ich noch nie gehört.</b><br>
+        Ja! Das Thema geht alle an und hier kannst du lernen warum.<br><br>
+    </p>
+
+    <div class="twocolumn">
+    <h3>Wo:</h3>
+    <div id="mapcontainer">
+    <span class="hidden"><b>Karte:</b><br>
+    <a href="https://www.google.com/maps/place/Alter+Steinweg+11,+48143+Münster,+Deutschland/@51.96271,7.63119,17z" target="_blank">Google</a><br>
+    <a href="http://www.openstreetmap.org/?mlat=51.96280&mlon=7.63125#map=18/51.96279/7.63138&layers=Q" target="_blank">OSM</a></span>
+    <img src="assets/mappreview.png" id="mapthumbnail" onmousedown="$('#mapcontainer img, #mapcontainer span').toggleClass('hidden')">
+    </div>
+    <p>Lesesaal Stadbücherei<br>
+    Alter Steinweg 11<br>
+    48143 Münster</p>
+    </div>
+
+    <div class="twocolumn">
+    <h3>Wann:</h3>
+    <p>Samstag, 21. Februar 2015<br>
+    10 bis 17 Uhr</p>
+    </div>
+
+    <h3>Orga Team: </h3>
+    <p>
+    <a href="https://twitter.com/mila_frerichs">@mila_frerichs</a><br>
+    <a href="https://twitter.com/ubergesundheit">@ubergesundheit</a> 
+    </p>
+
+    <h3>Anmeldung</h3>
+    <p>Die Anmeldung zum Open Data Day (am Ende dieser Seite) ist freiwillig, hilft uns aber bei der besseren Planung.<br> Die Teilnahme ist kostenlos!</p>
   </div>
 
-  <!-- Begin MailChimp Signup Form -->
-     <div id="mc_embed_signup">
-       <form action="http://github.us3.list-manage.com/subscribe/post?u=0280dca8af5c7f6308e1e36ae&amp;id=8151d48caa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-       <div class="mc-field-group">
-         <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="E-Mail Adresse">
-       </div>
-       <div id="mce-responses" class="clear">
-         <div class="responsesse" id="mce-error-response" style="display:none"></div>
-         <div class="responsesseesponse" id="mce-success-response" style="display:none"></div>
-       </div>      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-           <div style="position: absolute; left: -5000px;"><input type="text" name="b_0280dca8af5c7f6308e1e36ae_8151d48caa" value=""></div>
-           <div class="clearr"><input type="submit" value="Get Updates!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-       </form>
+   <!-- Begin MailChimp Signup Form -->
+   <div id="mc_embed_signup">
+     <form action="http://github.us3.list-manage.com/subscribe/post?u=0280dca8af5c7f6308e1e36ae&amp;id=8151d48caa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+     <div class="mc-field-group">
+       <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="E-Mail Adresse">
      </div>
+     <div id="mce-responses" class="clear">
+       <div class="responsesse" id="mce-error-response" style="display:none"></div>
+       <div class="responsesseesponse" id="mce-success-response" style="display:none"></div>
+     </div>      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+         <div style="position: absolute; left: -5000px;"><input type="text" name="b_0280dca8af5c7f6308e1e36ae_8151d48caa" value=""></div>
+         <div class="clearr"><input type="submit" value="Newsletter bestellen" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+     </form>
+   </div>
    <!--End mc_embed_signup-->
+
    <div id="tickets">
-     <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.de/tickets-external?eid=10345416419&ref=etckt" frameborder="0" height="352" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.de/r/etckt">Online-Registrierung für Events</a><span style="color:#ddd;"> für </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://www.eventbrite.de/e/open-data-day-munster-tickets-10345416419?ref=etckt">Open Data Day Münster</a> <span style="color:#ddd;">unterstützt von</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.de?ref=etckt">Eventbrite</a></div></div>
+     <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.de/tickets-external?eid=15441076676&ref=etckt" frameborder="0" height="250" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.de/r/etckt">Online-Registrierung für Events</a><span style="color:#ddd;"> für </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://www.eventbrite.de/e/tag-der-offenen-daten-munster-tickets-15441076676?ref=etckt">Open Data Day Münster</a> <span style="color:#ddd;">unterstützt von</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.de?ref=etckt">Eventbrite</a></div></div>
    </div>
 </div>
-<footer>
-  Orga Team: 
-  <a href="https://twitter.com/kirel">@kirel</a> | 
-  <a href="https://twitter.com/mila_frerichs">@mila_frerichs</a> | 
-  <a href="https://twitter.com/ubergesundheit">@ubergesundheit</a> | 
-  <a href="https://twitter.com/peterlih">@peterlih</a>
-</footer>
+
