Ort ist noch nicht fest, etwas Abstand zwischen Texten

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ title: Open Data Day Münster 2015
 
     <div class="twocolumn">
     <h3>Wo:</h3>
+    <!--
     <div id="mapcontainer">
     <span class="hidden"><b>Karte:</b><br>
     <a href="https://www.google.com/maps/place/Alter+Steinweg+11,+48143+Münster,+Deutschland/@51.96271,7.63119,17z" target="_blank">Google</a><br>
@@ -42,6 +43,8 @@ title: Open Data Day Münster 2015
     <p>Lesesaal Stadbücherei<br>
     Alter Steinweg 11<br>
     48143 Münster</p>
+    -->
+    <p>Der Ort wird noch bekannt gegeben, abonniert unseren Newsletter, um auf dem Laufenden zu bleiben!</p>
     </div>
 
     <div class="twocolumn">
