Ort ist noch nicht fest (2)

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ title: Open Data Day Münster 2015
     Alter Steinweg 11<br>
     48143 Münster</p>
     -->
-    <p>Der Ort wird noch bekannt gegeben, abonniert unseren Newsletter, um auf dem Laufenden zu bleiben!</p>
+    <p>Der Ort wird noch bekannt gegeben</p>
     </div>
 
     <div class="twocolumn">
