--- a/index.html
+++ b/index.html
@@ -33,18 +33,9 @@ title: Open Data Day Münster 2015
 
     <div class="twocolumn">
     <h3>Wo:</h3>
-    <!--
-    <div id="mapcontainer">
-    <span class="hidden"><b>Karte:</b><br>
-    <a href="https://www.google.com/maps/place/Alter+Steinweg+11,+48143+Münster,+Deutschland/@51.96271,7.63119,17z" target="_blank">Google</a><br>
-    <a href="http://www.openstreetmap.org/?mlat=51.96280&mlon=7.63125#map=18/51.96279/7.63138&layers=Q" target="_blank">OSM</a></span>
-    <img src="assets/mappreview.png" id="mapthumbnail" onmousedown="$('#mapcontainer img, #mapcontainer span').toggleClass('hidden')">
-    </div>
-    <p>Lesesaal Stadbücherei<br>
-    Alter Steinweg 11<br>
+    <p>VHS Forum<br>
+    Aegidimarkt 4<br>
     48143 Münster</p>
-    -->
-    <p>Der Ort wird noch bekannt gegeben</p>
     </div>
 
     <div class="twocolumn">
