--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: Open Data Day Münster 2015
+title: Open Data Day Münster 2016
 ---
 <div id="home">
-  <h3>Open Data Day 2015</h3>
+  <h3>Open Data Day 2016</h3>
   <h1>Tag der offenen Daten</h1>
-  <h2>Münster, 21.2.2015</h2>
+  <h2>Münster, 5.3.2015</h2>
   <hr/>
   <div id="intro">
     <p>
-    Am 21. Februar treffen sich weltweit Aktivisten, um sich für Open Data nützlich zu machen. Auch in Münster organisieren wir wieder ein Event. Wir laden Entwickler, Designer, Open-Data-Interessierte, Geographen, Stadtentwickler, Journalisten und Aktivisten herzlich ein, sich zu beteiligen!</p>
+    Am 5. März treffen sich weltweit Aktivisten, um sich für Open Data nützlich zu machen. Auch in Münster organisieren wir wieder ein Event. Wir laden Entwickler, Designer, Open-Data-Interessierte, Geographen, Stadtentwickler, Journalisten und Aktivisten herzlich ein, sich zu beteiligen!</p>
 
     <h2>Wir planen:</h2>
     <div class="twocolumn">
@@ -33,28 +33,28 @@ title: Open Data Day Münster 2015
 
     <div class="twocolumn">
     <h3>Wo:</h3>
-    <p>VHS Forum<br>
+    <p>Wird noch bekanntgegeben</p>
+    <!--<p>VHS Forum<br>
     Aegidimarkt 4<br>
-    48143 Münster</p>
+    48143 Münster</p>-->
     </div>
 
     <div class="twocolumn">
     <h3>Wann:</h3>
-    <p>Samstag, 21. Februar 2015<br>
-    10 bis 17 Uhr</p>
+    <p>Samstag, 5. März 2016<!--<br>
+    10 bis 17 Uhr--></p>
     </div>
 
     <h3>Orga Team: </h3>
     <p>
-    <a href="https://twitter.com/mila_frerichs">@mila_frerichs</a><br>
     <a href="https://twitter.com/ubergesundheit">@ubergesundheit</a> 
     </p>
 
-    <h3>Anmeldung</h3>
-    <p>Die Anmeldung zum Open Data Day (am Ende dieser Seite) ist freiwillig, hilft uns aber bei der besseren Planung.<br> Die Teilnahme ist kostenlos!</p>
+    <!--<h3>Anmeldung</h3>
+    <p>Die Anmeldung zum Open Data Day (am Ende dieser Seite) ist freiwillig, hilft uns aber bei der besseren Planung.<br> Die Teilnahme ist kostenlos!</p>-->
   </div>
 
-   <!-- Begin MailChimp Signup Form -->
+<!--    
    <div id="mc_embed_signup">
      <form action="http://github.us3.list-manage.com/subscribe/post?u=0280dca8af5c7f6308e1e36ae&amp;id=8151d48caa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
      <div class="mc-field-group">
@@ -63,15 +63,15 @@ title: Open Data Day Münster 2015
      <div id="mce-responses" class="clear">
        <div class="responsesse" id="mce-error-response" style="display:none"></div>
        <div class="responsesseesponse" id="mce-success-response" style="display:none"></div>
-     </div>      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+     </div>
          <div style="position: absolute; left: -5000px;"><input type="text" name="b_0280dca8af5c7f6308e1e36ae_8151d48caa" value=""></div>
          <div class="clearr"><input type="submit" value="Newsletter bestellen" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
      </form>
    </div>
-   <!--End mc_embed_signup-->
 
    <div id="tickets">
      <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.de/tickets-external?eid=15441076676&ref=etckt" frameborder="0" height="250" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.de/r/etckt">Online-Registrierung für Events</a><span style="color:#ddd;"> für </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://www.eventbrite.de/e/tag-der-offenen-daten-munster-tickets-15441076676?ref=etckt">Open Data Day Münster</a> <span style="color:#ddd;">unterstützt von</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.de?ref=etckt">Eventbrite</a></div></div>
    </div>
+   -->
 </div>
 
