--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Open Data Day Münster 2016
 <div id="home">
   <h3>Open Data Day 2016</h3>
   <h1>Tag der offenen Daten</h1>
-  <h2>Münster, 5.3.2015</h2>
+  <h2>Münster, 5.3.2016</h2>
   <hr/>
   <div id="intro">
     <p>
@@ -48,10 +48,14 @@ title: Open Data Day Münster 2016
     <h3>Orga Team: </h3>
     <p>
     <a href="https://twitter.com/ubergesundheit">@ubergesundheit</a> 
+    <a href="https://twitter.com/codeformuenster">@codeformuenster</a> 
     </p>
 
     <!--<h3>Anmeldung</h3>
     <p>Die Anmeldung zum Open Data Day (am Ende dieser Seite) ist freiwillig, hilft uns aber bei der besseren Planung.<br> Die Teilnahme ist kostenlos!</p>-->
+    <br/>
+    <br/>
+    <br/>
   </div>
 
 <!--    
