--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ title: Open Data Day Münster 2016
 
     <h3>Orga Team: </h3>
     <p>
-    <a href="https://twitter.com/ubergesundheit">@ubergesundheit</a> 
+    <a href="https://twitter.com/ubergesundheit">@ubergesundheit</a> <br/>
     <a href="https://twitter.com/codeformuenster">@codeformuenster</a> 
     </p>
 
