--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@ title: Open Data Day Münster 2016
   <h2>Münster, 5.3.2016</h2>
   <hr/>
   <div id="intro">
-    <p>
-    Am 5. März treffen sich weltweit Aktivisten, um sich für Open Data nützlich zu machen. Auch in Münster organisieren wir wieder ein Event. Wir laden Entwickler, Designer, Open-Data-Interessierte, Geographen, Stadtentwickler, Journalisten und Aktivisten herzlich ein, sich zu beteiligen!</p>
+    <p>Am 5. März treffen sich weltweit Aktivisten, um sich für Open Data nützlich zu machen. Auch in Münster organisieren wir wieder ein Event. Wir laden Entwickler, Designer, Open-Data-Interessierte, Geographen, Stadtentwickler, Journalisten und Aktivisten herzlich ein, sich zu beteiligen!</p>
 
     <h2>Wir planen:</h2>
+
     <div class="twocolumn">
     <h3>Hackathon</h3> 
     <p>Für Entwickler die mit dem Thema schon vertraut sind und eigene Ideen umsetzen wollen. Wir stellen hierfür einige Datensätze bereit.</p>
     </div>
+
     <div class="twocolumn">
     <h3>Workshops</h3> 
     <p>Für Entwickler, technisch versierte Aktivisten, Journalisten und Interessierte, die sich mit sich offenen Daten und Open-Data-Werkzeugen beschäftigen wollen.</p>
@@ -26,17 +27,16 @@ title: Open Data Day Münster 2016
       <b>Ich interessiere mich für Transparenz und möchte mich zivil engagieren.</b><br>
         Ja! Du kannst bei der Münster FAQ mithelfen.<br><br>
       <b>Ich bin Journalist und kann Excel aber das reicht nicht immer.</b><br>
-        Ja! Wir zeigen Tools und wie man sie nutzen kann.<br><br>
+        Ja! Wir zeigen Programme und Tools und wie man sie nutzen kann.<br><br>
       <b>Open Data? Datenjournalismus? Das hab ich noch nie gehört.</b><br>
         Ja! Das Thema geht alle an und hier kannst du lernen warum.<br><br>
     </p>
 
     <div class="twocolumn">
     <h3>Wo:</h3>
-    <p>Wird noch bekanntgegeben</p>
-    <!--<p>VHS Forum<br>
+    <p>VHS Forum<br>
     Aegidimarkt 4<br>
-    48143 Münster</p>-->
+    48143 Münster</p>
     </div>
 
     <div class="twocolumn">
@@ -51,15 +51,15 @@ title: Open Data Day Münster 2016
     <a href="https://twitter.com/codeformuenster">@codeformuenster</a> 
     </p>
 
-    <!--<h3>Anmeldung</h3>
-    <p>Die Anmeldung zum Open Data Day (am Ende dieser Seite) ist freiwillig, hilft uns aber bei der besseren Planung.<br> Die Teilnahme ist kostenlos!</p>-->
+    <h3>Anmeldung</h3>
+    <p>Die Anmeldung zum Open Data Day (am Ende dieser Seite) ist freiwillig, hilft uns aber bei der besseren Planung.<br> Die Teilnahme ist kostenlos!</p>
     <br/>
     <br/>
     <br/>
   </div>
 
-<!--    
-   <div id="mc_embed_signup">
+
+  <div id="mc_embed_signup">
      <form action="http://github.us3.list-manage.com/subscribe/post?u=0280dca8af5c7f6308e1e36ae&amp;id=8151d48caa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
      <div class="mc-field-group">
        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="E-Mail Adresse">
@@ -71,11 +71,11 @@ title: Open Data Day Münster 2016
          <div style="position: absolute; left: -5000px;"><input type="text" name="b_0280dca8af5c7f6308e1e36ae_8151d48caa" value=""></div>
          <div class="clearr"><input type="submit" value="Newsletter bestellen" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
      </form>
-   </div>
+  </div>
 
-   <div id="tickets">
+  <div id="tickets">
      <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.de/tickets-external?eid=15441076676&ref=etckt" frameborder="0" height="250" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.de/r/etckt">Online-Registrierung für Events</a><span style="color:#ddd;"> für </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://www.eventbrite.de/e/tag-der-offenen-daten-munster-tickets-15441076676?ref=etckt">Open Data Day Münster</a> <span style="color:#ddd;">unterstützt von</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.de?ref=etckt">Eventbrite</a></div></div>
-   </div>
-   -->
+  </div>
+
 </div>
 
