--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ title: Open Data Day Münster 2016
     <h3>Ist das was für mich?</h3>
     <p>
       <b>Ich interessiere mich für Transparenz und möchte mich zivil engagieren.</b><br>
-        Ja! Du kannst bei der Münster FAQ mithelfen.<br><br>
-      <b>Ich bin Journalist und kann Excel aber das reicht nicht immer.</b><br>
+        Ja! Du kannst bei laufenden Projekten oder neuen Projekten, die auf dem Open Data Day entstehen, mithelfen und Ideen geben.<br><br>
+      <b>Ich bin Journalist und kann Excel, aber das reicht nicht immer.</b><br>
         Ja! Wir zeigen Programme und Tools und wie man sie nutzen kann.<br><br>
       <b>Open Data? Datenjournalismus? Das hab ich noch nie gehört.</b><br>
         Ja! Das Thema geht alle an und hier kannst du lernen warum.<br><br>
@@ -41,8 +41,8 @@ title: Open Data Day Münster 2016
 
     <div class="twocolumn">
     <h3>Wann:</h3>
-    <p>Samstag, 5. März 2016<!--<br>
-    10 bis 17 Uhr--></p>
+    <p>Samstag, 5. März 2016<br>
+    10 bis 17 Uhr</p>
     </div>
 
     <h3>Orga Team: </h3>
@@ -52,29 +52,14 @@ title: Open Data Day Münster 2016
     </p>
 
     <h3>Anmeldung</h3>
-    <p>Die Anmeldung zum Open Data Day (am Ende dieser Seite) ist freiwillig, hilft uns aber bei der besseren Planung.<br> Die Teilnahme ist kostenlos!</p>
+    <p>Die Anmeldung zum Open Data Day über Eventbrite (am Ende dieser Seite) oder über <a href="http://www.meetup.com/OK-Lab-Munster/events/227165551/" target="_blank">Meetup.com</a> ist freiwillig, hilft uns aber bei der besseren Planung.<br> Die Teilnahme ist kostenlos!</p>
     <br/>
     <br/>
     <br/>
-  </div>
-
-
-  <div id="mc_embed_signup">
-     <form action="http://github.us3.list-manage.com/subscribe/post?u=0280dca8af5c7f6308e1e36ae&amp;id=8151d48caa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-     <div class="mc-field-group">
-       <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="E-Mail Adresse">
-     </div>
-     <div id="mce-responses" class="clear">
-       <div class="responsesse" id="mce-error-response" style="display:none"></div>
-       <div class="responsesseesponse" id="mce-success-response" style="display:none"></div>
-     </div>
-         <div style="position: absolute; left: -5000px;"><input type="text" name="b_0280dca8af5c7f6308e1e36ae_8151d48caa" value=""></div>
-         <div class="clearr"><input type="submit" value="Newsletter bestellen" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-     </form>
   </div>
 
   <div id="tickets">
-     <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.de/tickets-external?eid=15441076676&ref=etckt" frameborder="0" height="250" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.de/r/etckt">Online-Registrierung für Events</a><span style="color:#ddd;"> für </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://www.eventbrite.de/e/tag-der-offenen-daten-munster-tickets-15441076676?ref=etckt">Open Data Day Münster</a> <span style="color:#ddd;">unterstützt von</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.de?ref=etckt">Eventbrite</a></div></div>
+     <div style="width:100%; text-align:left;" ><iframe  src="//eventbrite.de/tickets-external?eid=20763825160&ref=etckt" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a class="powered-by-eb" style="color: #dddddd; text-decoration: none;" target="_blank" href="http://www.eventbrite.de/r/etckt">Von Eventbrite</a></div></div>
   </div>
 
 </div>
