--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@ title: Open Data Day Münster 2016
 
     <h3>Orga Team: </h3>
     <p>
-    <a href="https://twitter.com/ubergesundheit">@ubergesundheit</a> <br/>
-    <a href="https://twitter.com/codeformuenster">@codeformuenster</a> 
+    <a href="https://twitter.com/codeformuenster"><i class="fa fa-github"></i> <b>@codeformuenster</b></a> <br/>
+    <a href="https://twitter.com/ubergesundheit"><i class="fa fa-github"></i> @ubergesundheit</a> <br/>
+    <a href="https://twitter.com/webwurst"><i class="fa fa-github"></i> @webwurst</a> <br/>
+    <a href="https://twitter.com/toms_rocket"><i class="fa fa-github"></i> @toms_rocket</a> <br/>
+    <a href="https://twitter.com/chrki"><i class="fa fa-github"></i> @chrki</a>
     </p>
 
     <h3>Anmeldung</h3>
