add preliminary agenda

--- a/index.html
+++ b/index.html
@@ -10,17 +10,33 @@ title: Open Data Day Münster 2016
   <div id="intro">
     <p>Am 5. März treffen sich weltweit Aktivisten, um sich für Open Data nützlich zu machen. Auch in Münster organisieren wir wieder ein Event. Wir laden Entwickler, Designer, Open-Data-Interessierte, Geographen, Stadtentwickler, Journalisten und Aktivisten herzlich ein, sich zu beteiligen!</p>
 
-    <h2>Wir planen:</h2>
-
     <div class="twocolumn">
-    <h3>Hackathon</h3> 
-    <p>Für Entwickler die mit dem Thema schon vertraut sind und eigene Ideen umsetzen wollen. Wir stellen hierfür einige Datensätze bereit.</p>
+    <h3>Agenda (vorläufig)</h3>
+    <p>
+      <b>10:00</b> Begrüßung<br/>
+      Grußwort Bürgermeisterin Wendela-Beate Vilhjalmsson<br/>
+      Jahresrückblick Code for Münster<br/>
+      <b>Vorträge:</b>(Vormittags)<br/>
+      &nbsp;&nbsp;&nbsp;&nbsp;Projekte Code for Münster<br/>
+      &nbsp;&nbsp;&nbsp;&nbsp;senseBox<br/>
+      &nbsp;&nbsp;&nbsp;&nbsp;Open Data im Informatikunterricht<br/>
+      &nbsp;&nbsp;&nbsp;&nbsp;Freifunk Münster<br/>
+      &nbsp;&nbsp;&nbsp;&nbsp;Überblick Open Data Datensätze<br/>
+      <b>Mittags:</b> Pizza<br/>
+      <b>Workshops:</b>(Nachmittags)<br/>
+      &nbsp;&nbsp;&nbsp;&nbsp;Open Data ohne Programmieren<br/>
+      &nbsp;&nbsp;&nbsp;&nbsp;senseBox Hands on<br/>
+
+    </p>
     </div>
 
     <div class="twocolumn">
-    <h3>Workshops</h3> 
+    <h3>Hackathon</h3>
+    <p>Für Entwickler die mit dem Thema schon vertraut sind und eigene Ideen umsetzen wollen. Wir stellen hierfür einige Datensätze bereit.</p>
+    <h3>Workshops</h3>
     <p>Für Entwickler, technisch versierte Aktivisten, Journalisten und Interessierte, die sich mit sich offenen Daten und Open-Data-Werkzeugen beschäftigen wollen.</p>
     </div>
+
 
     <h3>Ist das was für mich?</h3>
     <p>
@@ -37,12 +53,13 @@ title: Open Data Day Münster 2016
     <p>VHS Forum<br>
     Aegidimarkt 4<br>
     48143 Münster</p>
+    <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=7.621606886386871%2C51.959605695633044%2C7.624289095401763%2C51.96084033701785&amp;layer=mapnik&amp;marker=51.96022219417608%2C7.622947990894318" style="border: 1px solid black"></iframe><br/><small><a href="http://www.openstreetmap.org/?mlat=51.96022&amp;mlon=7.62295#map=19/51.96022/7.62295">Auf OpenStreetMap anzeigen</a></small>
     </div>
 
     <div class="twocolumn">
     <h3>Wann:</h3>
     <p>Samstag, 5. März 2016<br>
-    10 bis 17 Uhr</p>
+    9 bis 18 Uhr</p>
     </div>
 
     <h3>Orga Team: </h3>
