please bring your laptop

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@ title: Open Data Day Münster 2016
     <div class="twocolumn">
     <h3>Hackathon</h3>
     <p>Für Entwickler die mit dem Thema schon vertraut sind und eigene Ideen umsetzen wollen. Wir stellen hierfür einige Datensätze bereit.</p>
+    <p>Bringt am besten euren Laptop mit!</p>
     <h3>Workshops</h3>
     <p>Für Entwickler, technisch versierte Aktivisten, Journalisten und Interessierte, die sich mit sich offenen Daten und Open-Data-Werkzeugen beschäftigen wollen.</p>
+    <p>Auch hier: Bringt am besten euren Laptop mit!</p>
     </div>
 
 
