add osm vortrag

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ title: Open Data Day Münster 2016
       &nbsp;&nbsp;&nbsp;&nbsp;Open Data im Informatikunterricht<br/>
       &nbsp;&nbsp;&nbsp;&nbsp;Freifunk Münster<br/>
       &nbsp;&nbsp;&nbsp;&nbsp;Überblick Open Data Datensätze<br/>
+      &nbsp;&nbsp;&nbsp;&nbsp;OpenStreetMap in Münster<br/>
       <b>Mittags:</b> Pizza<br/>
       <b>Workshops:</b>(Nachmittags)<br/>
       &nbsp;&nbsp;&nbsp;&nbsp;Open Data ohne Programmieren<br/>
