rm nojekyll, update index

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@ title: Open Data Day Münster 2017
 <div id="home">
   <h3>Open Data Day 2017</h3>
   <h1>Tag der offenen Daten</h1>
-  <h2>Münster, 4.3.2017</h2>
+  <h2>Münster, Samstag 4.3.2017</h2>
   <hr/>
   <div id="intro">
-    <p>Am 4. März treffen sich weltweit Aktivisten, um sich für Open Data nützlich zu machen. Auch in Münster organisieren wir wieder ein Event. Wir laden Entwickler, Designer, Open-Data-Interessierte, Geographen, Stadtentwickler, Journalisten und Aktivisten herzlich ein, sich zu beteiligen!</p>
+    <p>Am Samstag den 4. März treffen sich weltweit Aktivisten, um sich für Open Data nützlich zu machen. Auch in Münster organisieren wir wieder ein Event. Wir laden Entwickler, Designer, Open-Data-Interessierte, Geographen, Stadtentwickler, Journalisten und Aktivisten herzlich ein, sich zu beteiligen!</p>
 
     <div class="twocolumn">
     <h3>Agenda (vorläufig)</h3>
-    <p>
+    <!-- <p>
       <b>10:00</b> Begrüßung<br/>
       Grußwort Bürgermeisterin Wendela-Beate Vilhjalmsson<br/>
       Jahresrückblick Code for Münster<br/>
@@ -28,16 +28,16 @@ title: Open Data Day Münster 2017
       &nbsp;&nbsp;&nbsp;&nbsp;Open Data ohne Programmieren<br/>
       &nbsp;&nbsp;&nbsp;&nbsp;senseBox Hands on<br/>
 
-    </p>
+    </p> -->
     </div>
 
     <div class="twocolumn">
-    <h3>Hackathon</h3>
+    <!-- <h3>Hackathon</h3>
     <p>Für Entwickler die mit dem Thema schon vertraut sind und eigene Ideen umsetzen wollen. Wir stellen hierfür einige Datensätze bereit.</p>
     <p>Bringt am besten euren Laptop mit!</p>
     <h3>Workshops</h3>
     <p>Für Entwickler, technisch versierte Aktivisten, Journalisten und Interessierte, die sich mit sich offenen Daten und Open-Data-Werkzeugen beschäftigen wollen.</p>
-    <p>Auch hier: Bringt am besten euren Laptop mit!</p>
+    <p>Auch hier: Bringt am besten euren Laptop mit!</p> -->
     </div>
 
 
@@ -71,18 +71,19 @@ title: Open Data Day Münster 2017
     <a href="https://twitter.com/ubergesundheit"><i class="fa fa-github"></i> @ubergesundheit</a> <br/>
     <a href="https://twitter.com/webwurst"><i class="fa fa-github"></i> @webwurst</a> <br/>
     <a href="https://twitter.com/toms_rocket"><i class="fa fa-github"></i> @toms_rocket</a> <br/>
-    <a href="https://twitter.com/chrki"><i class="fa fa-github"></i> @chrki</a>
+    <!-- <a href="https://twitter.com/chrki"><i class="fa fa-github"></i> @chrki</a> -->
     </p>
 
     <h3>Anmeldung</h3>
-    <p>Die Anmeldung zum Open Data Day über Eventbrite (am Ende dieser Seite) oder über <a href="http://www.meetup.com/OK-Lab-Munster/events/227165551/" target="_blank">Meetup.com</a> ist freiwillig, hilft uns aber bei der besseren Planung.<br> Die Teilnahme ist kostenlos!</p>
+    <p>Die Anmeldung zum Open Data Day über Meetup (am Ende dieser Seite) ist freiwillig, hilft uns aber bei der besseren Planung.<br> Die Teilnahme ist kostenlos! Wer keine Lust hat, sich einen Meetup Account zu machen, kann uns auch tweeten oder eine E-Mail schreiben an <pre>muenster [at] codefor [punkt] de</pre>.</p>
     <br/>
     <br/>
     <br/>
   </div>
 
   <div id="tickets">
-     <div style="width:100%; text-align:left;" ><iframe  src="//eventbrite.de/tickets-external?eid=20763825160&ref=etckt" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a class="powered-by-eb" style="color: #dddddd; text-decoration: none;" target="_blank" href="http://www.eventbrite.de/r/etckt">Von Eventbrite</a></div></div>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s); js.id=id;js.async=true;js.src="https://a248.e.akamai.net/secure.meetupstatic.com/s/script/2012676015776998360572/api/mu.btns.js?id=nf6jigvggg4lhdvj4jpdg3092j";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","mu-bootjs");</script>
+    <a href="https://www.meetup.com/OK-Lab-Munster/events/236074849/" data-event="236074849" class="mu-rsvp-btn">RSVP</a>
   </div>
 
 </div>
