also comment agenda

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ title: Open Data Day Münster 2017
     <p>Am Samstag den 4. März treffen sich weltweit Aktivisten, um sich für Open Data nützlich zu machen. Auch in Münster organisieren wir wieder ein Event. Wir laden Entwickler, Designer, Open-Data-Interessierte, Geographen, Stadtentwickler, Journalisten und Aktivisten herzlich ein, sich zu beteiligen!</p>
 
     <div class="twocolumn">
-    <h3>Agenda (vorläufig)</h3>
-    <!-- <p>
+    <!--<h3>Agenda (vorläufig)</h3>
+    <p>
       <b>10:00</b> Begrüßung<br/>
       Grußwort Bürgermeisterin Wendela-Beate Vilhjalmsson<br/>
       Jahresrückblick Code for Münster<br/>
