add text to registration

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@ title: Open Data Day Münster 2017
 
     <h3>Orga Team: </h3>
     <p>
-    <a href="https://twitter.com/codeformuenster"><i class="fa fa-github"></i> <b>@codeformuenster</b></a> <br/>
-    <a href="https://twitter.com/ubergesundheit"><i class="fa fa-github"></i> @ubergesundheit</a> <br/>
-    <a href="https://twitter.com/webwurst"><i class="fa fa-github"></i> @webwurst</a> <br/>
-    <a href="https://twitter.com/toms_rocket"><i class="fa fa-github"></i> @toms_rocket</a> <br/>
-    <!-- <a href="https://twitter.com/chrki"><i class="fa fa-github"></i> @chrki</a> -->
+    <a href="https://twitter.com/codeformuenster"><i class="fa fa-twitter"></i> <b>@codeformuenster</b></a> <br/>
+    <a href="https://twitter.com/ubergesundheit"><i class="fa fa-twitter"></i> @ubergesundheit</a> <br/>
+    <a href="https://twitter.com/webwurst"><i class="fa fa-twitter"></i> @webwurst</a> <br/>
+    <a href="https://twitter.com/toms_rocket"><i class="fa fa-twitter"></i> @toms_rocket</a> <br/>
+    <!-- <a href="https://twitter.com/chrki"><i class="fa fa-twitter"></i> @chrki</a> -->
     </p>
 
     <h3>Anmeldung</h3>
@@ -83,6 +83,8 @@ title: Open Data Day Münster 2017
 
   <div id="tickets">
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s); js.id=id;js.async=true;js.src="https://a248.e.akamai.net/secure.meetupstatic.com/s/script/2012676015776998360572/api/mu.btns.js?id=nf6jigvggg4lhdvj4jpdg3092j";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","mu-bootjs");</script>
+    <h3>Anmeldung</h3>
+    <p>Die Anmeldung erfolgt entweder über die <a href="https://www.meetup.com/OK-Lab-Munster/events/236074849/" target="_blank">Meetup Seite</a>, oder über diesen Button:</p>
     <a href="https://www.meetup.com/OK-Lab-Munster/events/236074849/" data-event="236074849" class="mu-rsvp-btn">RSVP</a>
   </div>
 
